[Feat] daekim 코드 추가

--- a/Level 2/34. 행렬 테두리 회전하기.md
+++ b/Level 2/34. 행렬 테두리 회전하기.md
@@ -59,4 +59,28 @@ function solution(rows, columns, queries) {
 
 daekim
 ```js
+function solution(rows, columns, queries) {
+    let ret = [];
+    let origin = Array.from({length: rows}, (_, idx) => Array.from({length: columns}, (_, i) => idx * columns + i + 1))
+    function rotate(arr) {
+        let tmp = origin[arr[0] - 1][arr[1] - 1];
+        let min = 10000;
+        for (let x = arr[0] - 1; x < arr[2] - 1; x++)
+            if ((origin[x][arr[1] - 1] = origin[x + 1][arr[1] - 1]) < min)
+                min = origin[x + 1][arr[1] - 1];
+        for (let y = arr[1] - 1; y < arr[3] - 1; y++)
+            if ((origin[arr[2] - 1][y] = origin[arr[2] - 1][y + 1]) < min)
+                min = origin[arr[2] - 1][y + 1];
+        for (let x = arr[2] - 1; x > arr[0] - 1; x--)
+            if ((origin[x][arr[3] - 1] = origin[x - 1][arr[3] - 1]) < min)
+                min = origin[x - 1][arr[3] - 1];
+        for (let y = arr[3] - 1; y > arr[1]; y--)
+            if ((origin[arr[0] - 1][y] = origin[arr[0] - 1][y - 1]) < min)
+                min = origin[arr[0] - 1][y - 1];
+        if ((origin[arr[0] - 1][arr[1]] = tmp) < min) min = tmp;
+        ret.push(min);
+    }
+    queries.forEach(e => rotate(e));
+    return ret;
+}
 ```
