[Feat] daekim 코드 추가

--- a/Level 2/35. 두 큐 합 같게 만들기.md
+++ b/Level 2/35. 두 큐 합 같게 만들기.md
@@ -46,4 +46,19 @@ function solution(queue1, queue2) {
 
 daekim
 ```js
+function solution(queue1, queue2) {
+    let arr = queue1.concat(queue2);
+    let sum1 = queue1.reduce((acc, cur) => acc += cur, 0)
+    let sum2 = queue2.reduce((acc, cur) => acc += cur, 0)
+    let goal = (sum1 + sum2) / 2;
+    let cnt = -1;
+    let i = 0;
+    let j = queue1.length;
+    while(++cnt > -1 && cnt < arr.length * 2) {
+        if (sum1 === goal) return cnt;
+        else if (sum1 > goal) sum1 -= arr[i++];
+        else if (sum1 < goal) sum1 += arr[j++];
+    }
+    return -1;
+}
 ```
