--- a/Level 1/30. 소수 찾기.md
+++ b/Level 1/30. 소수 찾기.md
@@ -29,18 +29,16 @@ function solution(n) {
 daekim
 ```js
 function solution(n) {
-    let cnt = 4;
+    let cnt = 2;
     let j, sqrt;
     if (n === 2) return 1;
-    else if (n === 3) return 2;
-    else if (n <= 6) return 3;
-    else if (n <= 10) return 4;
-    for (let i = 11; i <= n; i += 2){
+    for (let i = 3; i <= n; i += 2){
         sqrt = Math.sqrt(i);
         for (j = 3; j <= sqrt; j += 2)
             if (!(i % j)) break;
-        if (j > sqrt) cnt++;
+        if (i % j) cnt++;
     }
     return cnt;
 }
+
 ```
