[Feat] daekim 코드 수정

--- a/Level 1/32. 소수 만들기.md
+++ b/Level 1/32. 소수 만들기.md
@@ -49,15 +49,10 @@ function solution(nums) {
     let i, sqrt;
     
     function prime(num) {
-        if (num === 7) {
-            ret++;
-            return ;
-        }
-        else if (num < 11) return ;
         sqrt = Math.sqrt(num);
         for (i = 3; i <= sqrt; i += 2)
             if (!(num % i)) break;
-        if (sqrt < i) ret++;
+        if (num % i) ret++;
     }
     
     function rec(arr, sum, cnt){
