[Fix] jihyukim 코드 수정

--- a/Level 2/35. 두 큐 합 같게 만들기.md
+++ b/Level 2/35. 두 큐 합 같게 만들기.md
@@ -1,13 +1,13 @@
 jihyukim
 ```js
 function solution(queue1, queue2) {
-    const queue = queue1.concat(queue2);
-    const goal = queue.reduce((a, b) => a + b) / 2;
-    
     let [start, end] = [0, queue1.length];
     let sum = queue1.reduce((a, b) => a + b);
     
-    for (let move = 0; move <= queue.length + 2; move++) {
+    const goal = (sum + queue2.reduce((a, b) => a + b)) / 2;
+    const queue = queue1.concat(queue2, queue1);
+
+    for (let move = 0; move < queue.length - 2; move++) {
         if (sum === goal) return move;
         if (sum > goal) {
             sum -= queue[start];
