[Feat] daekim 코드 추가

--- a/Level 1/33. 서울에서 김서방 찾기.md
+++ b/Level 1/33. 서울에서 김서방 찾기.md
@@ -4,3 +4,14 @@ function solution(seoul) {
     return `김서방은 ${seoul.indexOf("Kim")}에 있다`
 }
 ```
+
+jabae
+```js
+```
+
+daekim
+```js
+function solution(seoul) {
+    return ("김서방은 " + seoul.indexOf("Kim") + "에 있다");
+}
+```
