[Feat] daekim 코드 추가

--- a/Level 1/34. 핸드폰 번호 가리기.md
+++ b/Level 1/34. 핸드폰 번호 가리기.md
@@ -4,3 +4,14 @@ function solution(phone_number) {
     return '*'.repeat(phone_number.length - 4) + phone_number.slice(-4);
 }
 ```
+
+jabae
+```js
+```
+
+daekim
+```js
+function solution(phone_number) {
+    return phone_number.split('').map((el, idx) => idx < phone_number.length - 4 ? el = '*' : el).join('');
+}
+```
