[Feat] daekim 코드 추가

--- a/Level 1/35. 나누어 떨어지는 숫자 배열.md
+++ b/Level 1/35. 나누어 떨어지는 숫자 배열.md
@@ -5,3 +5,15 @@ function solution(arr, divisor) {
     return res.length ? res.sort((a, b) => a - b) : [-1];
 }
 ```
+
+jabae
+```js
+```
+
+daekim
+```js
+function solution(arr, divisor) {
+    let ret = arr.filter((el) => {if (!(el % divisor)) return el;}).sort((a, b) => a - b)
+    return ret.length === 0 ? [-1] : ret
+}
+```
