[Feat] daekim 코드 추가

--- a/Level 2/37. 땅따먹기.md
+++ b/Level 2/37. 땅따먹기.md
@@ -4,3 +4,22 @@ function solution(land) {
     return Math.max(...land.reduce((acc, cur) => cur.map((el, i) => el + Math.max(...acc.filter((_, j) => j !== i)))));
 }
 ```
+
+jabae
+```js
+```
+
+daekim
+```js
+function solution (land) {
+    land.forEach((el, idx) => {
+        if (idx > 0){
+            el[0] += Math.max(land[idx - 1][1], land[idx - 1][2], land[idx - 1][3]);
+            el[1] += Math.max(land[idx - 1][0], land[idx - 1][2], land[idx - 1][3]);
+            el[2] += Math.max(land[idx - 1][0], land[idx - 1][1], land[idx - 1][3]);
+            el[3] += Math.max(land[idx - 1][0], land[idx - 1][1], land[idx - 1][2]);
+        }
+    })
+    return Math.max(...land[land.length - 1]);
+}
+```
