[Feat] daekim 코드 추가

--- a/Level 2/36. 귤 고르기.md
+++ b/Level 2/36. 귤 고르기.md
@@ -12,3 +12,20 @@ function solution(k, tangerine) {
     return arr.length;
 }
 ```
+
+jabae
+```js
+```
+
+daekim
+```js
+function solution(k, tangerine) {
+    let obj = {};
+    let arr = [];
+    let i;
+    tangerine.forEach((el, idx) => {obj[el] >= 1 ? obj[el]++ : obj[el] = 1});
+    arr = Object.values(obj).sort((a, b) => b - a);
+    for (i = 0; k > 0; i++) k -= arr[i];
+    return i;
+}
+```
