[Feat] 자배 코드 추가

--- a/Level 1/33. 서울에서 김서방 찾기.md
+++ b/Level 1/33. 서울에서 김서방 찾기.md
@@ -7,6 +7,9 @@ function solution(seoul) {
 
 jabae
 ```js
+function solution(seoul) {
+    return `김서방은 ${seoul.indexOf("Kim")}에 있다`;
+}
 ```
 
 daekim
