[Feat] 자배 코드 추가

--- a/Level 1/34. 핸드폰 번호 가리기.md
+++ b/Level 1/34. 핸드폰 번호 가리기.md
@@ -7,6 +7,9 @@ function solution(phone_number) {
 
 jabae
 ```js
+function solution(phone_number) {
+    return "*".repeat(phone_number.length - 4) + phone_number.slice(-4);
+}
 ```
 
 daekim
