[Feat] 자배 코드 추가

--- a/Level 1/35. 나누어 떨어지는 숫자 배열.md
+++ b/Level 1/35. 나누어 떨어지는 숫자 배열.md
@@ -8,6 +8,10 @@ function solution(arr, divisor) {
 
 jabae
 ```js
+function solution(arr, divisor) {
+    const answer = arr.filter((el) => !(el % divisor));
+    return answer.length ? answer.sort((a, b) => a - b) : [-1];
+}
 ```
 
 daekim
