--- a/Level 2/36. 귤 고르기.md
+++ b/Level 2/36. 귤 고르기.md
@@ -15,6 +15,19 @@ function solution(k, tangerine) {
 
 jabae
 ```js
+function solution(k, tangerine) {
+    let answer = 0;
+    const bundle = Object.values(tangerine.reduce((list, item) => {
+        if (item in list) list[item]++;
+        else list[item] = 1;
+        return list;
+    }, {})).sort((a, b) => b - a);
+
+    for (let i = 0; i < bundle.length && k > 0; i++)
+        k -= bundle[i], answer++;
+
+    return answer;
+}
 ```
 
 daekim
