[Feat] 자배 코드 추가

--- a/Level 2/37. 땅따먹기.md
+++ b/Level 2/37. 땅따먹기.md
@@ -7,6 +7,17 @@ function solution(land) {
 
 jabae
 ```js
+function solution(land) {
+    const answer = land.reduce((bf, cur) => {
+        return cur.map((now, i) => {
+            const tmp = [];
+            for (let j = 0; j < cur.length; j++)
+                if (i != j) tmp.push(now + bf[j]);
+            return Math.max(...tmp);
+        })
+    })
+    return Math.max(...answer);
+}
 ```
 
 daekim
