[Feat] jihyukim 코드 추가

--- a/Level 1/38. 크기가 작은 부분 문자열.md
+++ b/Level 1/38. 크기가 작은 부분 문자열.md
@@ -1,6 +1,12 @@
 jihyukim
 ```js
-
+function solution(t, p) {
+    let ret = 0;
+    for (let i = 0; i <= t.length - p.length; i++) {
+        if (t.substring(i, i + p.length) <= p) ret++;
+    }
+    return ret;
+}
 ```
 
 jabae
