[Feat] 자배 코드 추가

--- a/Level 1/36. 콜라 문제.md
+++ b/Level 1/36. 콜라 문제.md
@@ -5,7 +5,14 @@ jihyukim
 
 jabae
 ```js
-
+function solution(a, b, n) {
+    let answer = 0
+    
+    for (let get = parseInt(n / a) * b; n >= a; get = parseInt(n / a) * b) 
+        n = n % a + get, answer += get;
+ 
+    return answer;
+}
 ```
 
 daekim
