[Feat] 자배 코드 추가

--- a/Level 1/37. 실패율.md
+++ b/Level 1/37. 실패율.md
@@ -5,7 +5,24 @@ jihyukim
 
 jabae
 ```js
+function solution(N, stages) {
+    let answer = [];
+    let looser = 0;
+    let totalUser = stages.length;
 
+    stages.sort((a, b) => a - b);
+    for (let stage = 1; stage <= N; stage++) {
+        looser = 0;
+
+         while (stages[looser] === stage) looser++;
+        
+        answer.push([stage, looser / totalUser]);
+        totalUser -= looser;
+        stages.splice(0, looser);
+    }
+    
+    return answer.sort((a, b) => b[1] - a[1]).map(([a, b]) => a);
+}
 ```
 
 daekim
