[Feat] 자배 코드추가

--- a/Level 1/38. 크기가 작은 부분 문자열.md
+++ b/Level 1/38. 크기가 작은 부분 문자열.md
@@ -11,7 +11,13 @@ function solution(t, p) {
 
 jabae
 ```js
-
+function solution(t, p) {
+    let answer = 0;
+    for (let i = 0; i <= t.length - p.length; i++) {
+        if (t.substring(i, i + p.length) <= p) answer++;   
+    }
+    return answer;
+}
 ```
 
 daekim
