[Feat] jihyukim 코드 추가

--- a/Level 1/37. 실패율.md
+++ b/Level 1/37. 실패율.md
@@ -1,6 +1,13 @@
 jihyukim
 ```js
-
+function solution(N, stages) {
+    const ret = Array.from({length: N}, (_, i) => [0, 0, i + 1]);
+    stages.forEach((el) => {
+        for (let i = (el > N ? N : el) - 1; i >= 0; i--) ret[i][1]++;
+        if (el <= N) ret[el - 1][0]++;
+    })
+    return ret.sort(([f1, t1, i], [f2, t2, j]) => f2 / t2 - f1 / t1).map((el) => el[2]);
+}
 ```
 
 jabae
