[Feat] jihyukim 코드 추가

--- a/Level 1/36. 콜라 문제.md
+++ b/Level 1/36. 콜라 문제.md
@@ -1,6 +1,13 @@
 jihyukim
 ```js
-
+function solution(give, take, n) {
+    let ret = 0;
+    while (n >= give) {
+        ret += Math.floor(n / give) * take;
+        n = Math.floor(n / give) * take + n % give;
+    }
+    return ret;
+}
 ```
 
 jabae
