[Feat] 자배 코드 추가

--- a/Level 2/38. 배달.md
+++ b/Level 2/38. 배달.md
@@ -5,7 +5,19 @@ jihyukim
 
 jabae
 ```js
-
+function solution(N, road, K) {
+    const deliver = Array.from({length: N}, () => -1);
+    const canGo = (st, pass, k) => {
+        if (k < 0 || k < deliver[st - 1]) return ;
+        deliver[st - 1] = k;
+        road.forEach(([a, b, kk], i) => {
+            if ((st === a || st === b) && pass.indexOf(i) < 0)
+                canGo(st === a ? b : a, [...pass, i], k - kk);
+        })
+    }
+    canGo(1, [], K);
+    return deliver.filter((el) => el !== -1).length;
+}
 ```
 
 daekim
