[Feat] 자배 코드 추가

--- a/Level 2/39. 줄 서는 방법.md
+++ b/Level 2/39. 줄 서는 방법.md
@@ -5,7 +5,28 @@ jihyukim
 
 jabae
 ```js
-
+function solution(n, k) {
+    const answer = [];
+    const people = Array.from({length: n}, (_, i) => i + 1);
+    const fac = (n) => {
+        let ret = 1;
+        for (let i = 1; i <= n; i++) ret *= i;
+        return ret;
+    }
+    let num = 0;
+    let next = 0;
+    
+    for (let i = n; i > 0; i--) {
+        next = k % fac(i - 1);
+        num = people[parseInt(k / fac(i - 1)) - (!next ? 1 : 0)];
+        
+        answer.push(num);
+        people.splice(people.indexOf(num), 1);
+        k = next || fac(i - 1);
+    }
+    
+    return answer;
+}
 ```
 
 daekim
