[Feat] jihyukim 코드 추가

--- a/Level 2/38. 배달.md
+++ b/Level 2/38. 배달.md
@@ -1,6 +1,25 @@
 jihyukim
 ```js
-
+function solution(N, road, K) {
+    const roads =  Array.from({length: N + 1}, () => ([]));
+    road.forEach(([a, b, c]) => {
+        roads[a].push({vil: b, len: c});
+        roads[b].push({vil: a, len: c});
+    })
+    let times = Array(N + 1).fill(0);
+    const queue = [{vil: 1, len: 0}];
+    
+    while (queue.length) {
+        const { vil, len } = queue.pop();
+        roads[vil].forEach((des) => {
+            if (des.vil !== 1 && (times[des.vil] === 0 || times[des.vil] > times[vil] + des.len)) {
+                times[des.vil] = times[vil] + des.len;
+                queue.push(des);
+            }
+        })
+    }
+    return times.filter((el) => el > 0 && el <= K).length + 1;
+}
 ```
 
 jabae
