[Fix] daekim 코드 수정

--- a/Level 2/19. 게임 맵 최단거리.md
+++ b/Level 2/19. 게임 맵 최단거리.md
@@ -60,40 +60,28 @@ function solution(maps) {
 }
 ```
 
-daekim - 효율성 테스트 실패
+daekim
 ```js
 function solution(maps) {
-    let min = maps.length * maps[0].length;
-    let obj = new Object();
-    let check = 0;
-
-    function rec(arr, cnt, x, y){
-        if (check === 1 && min === maps.length + maps[0].length - 1)
-            return ;
-        if (obj['x' + x + 'y'+ y] <= cnt || min <= cnt)
-            return ;
-        else
-            obj['x' + x + 'y'+ y] = cnt;
-        if (x === maps[0].length - 1 && y === maps.length - 1 && cnt < min)
-        {
-            min = cnt + 1;
-            check = 1;
-            return ;
-        }
-        arr[y][x] = 0;
-        if (y < arr.length - 1 && arr[y + 1][x] === 1)
-            rec(arr, cnt + 1, x, y + 1);
-        if (x < arr[0].length - 1 && arr[y][x + 1] === 1)
-            rec(arr, cnt + 1, x + 1, y);
-        if (y > 0 && arr[y - 1][x] === 1 && x < arr[0].length - 2)
-            rec(arr, cnt + 1, x, y - 1);
-        if (x > 0 && arr[y][x - 1] === 1 && y < arr.length - 2)
-            rec(arr, cnt + 1, x - 1, y);
-        arr[y][x] = 1;
+    const h = maps.length - 1;
+    const w = maps[0].length - 1;
+    const next = [[1, 0], [0, 1], [0, -1], [-1, 0]];
+    const queue = [[0, 0]];
+    const cnt = {'0, 0': 1};
+    let x, y;
+    
+    while (queue.length) {
+        const [befox, befoy] = queue.shift();
+        next.forEach((el) => {
+            x = el[0] + befox;
+            y = el[1] + befoy;
+            if (!(x < 0 || x > w || y < 0 || y > h) && maps[y][x] === 1) {
+                cnt[`${y}, ${x}`] = cnt[`${befoy}, ${befox}`] + 1;
+                maps[y][x] = 0;
+                queue.push([x, y]);
+            }
+        })
     }
-    rec(maps, 0, 0, 0);
-    if (min === maps.length * maps[0].length && check === 0)
-        min = -1;
-    return min;
+    return cnt[`${h}, ${w}`] ? cnt[`${h}, ${w}`] : -1;
 }
 ```
