--- a/Level 1/39. 푸드 파이트 대회.md
+++ b/Level 1/39. 푸드 파이트 대회.md
@@ -1,6 +1,13 @@
 jihyukim
 ```js
-
+function solution(food) {
+    let ret = '0';
+    for (let str, i = food.length - 1; i > 0; i--) {
+        str = i.toString().repeat(parseInt(food[i] / 2));
+        ret = str.concat(ret, str);
+    }
+    return ret;
+}
 ```
 
 jabae
