[Feat] jihyukim 코드 추가

--- a/Level 1/40. [1차] 다트게임.md
+++ b/Level 1/40. [1차] 다트게임.md
@@ -1,6 +1,19 @@
 jihyukim
 ```js
+function solution(dartResult) {
+    const bonus = { S: 1, D: 2, T: 3 }, option = { '*': [2, 2], '#': [-1, 1] };
+    let score = [];
 
+    dartResult.split(/([^0-9])/).filter((el) => el).forEach((el) => {
+        if (el in bonus) {
+            score[score.length - 1] = Math.pow(score.at(-1), bonus[el]);
+        } else if (el in option) {
+            score[score.length - 1] *= option[el][0];
+            score[score.length - 2] *= option[el][1];
+        } else score.push(parseInt(el));
+    })
+    return score.reduce((acc, cur) => acc + cur);
+}
 ```
 
 jabae
