[Feat] jihyukim 코드 추가

--- a/Level 1/41. 로또의 최고 순위와 최저 순위.md
+++ b/Level 1/41. 로또의 최고 순위와 최저 순위.md
@@ -1,6 +1,12 @@
 jihyukim
 ```js
+function solution(lottos, win_nums) {
+    const prize = [6, 6, 5, 4, 3, 2, 1];
+    const right = lottos.filter((el) => win_nums.includes(el)).length;
+    const unknown = lottos.filter((el) => el === 0).length;
 
+    return [prize[right + unknown], prize[right]];
+}
 ```
 
 jabae
