--- a/Level 2/40. 가장 큰 정사각형 찾기.md
+++ b/Level 2/40. 가장 큰 정사각형 찾기.md
@@ -16,6 +16,22 @@ function solution(board) {
 ```
 jabae
 ```js
+function solution(board) {
+    const h = board.length;
+    const w = board[0].length;
+    if (h < 2 || w < 2) return Math.max(...board.flat());
+    
+    let answer = 0;
+    for (let y = 1; y < h; y++) {
+        for (let x = 1; x < w; x++) {
+            if (board[y][x]) {
+                board[y][x] = Math.min(board[y-1][x], board[y][x-1], board[y-1][x-1]) + 1;
+                answer = Math.max(answer, board[y][x]);
+            }
+        }
+    }
+    return Math.pow(answer, 2);
+}
 
 ```
 daekim
