[Feat] 자배 코드 추가

--- a/Level 2/41. 롤케이크 자르기.md
+++ b/Level 2/41. 롤케이크 자르기.md
@@ -17,7 +17,30 @@ function solution(topping) {
 ```
 jabae
 ```js
+function solution(topping) {
+    const u = {};
+    const o = topping.reduce((acc, cur) => {
+        acc[cur] = (acc[cur] || 0) + 1;
+        return acc;
+    }, {});
+    let answer = 0;
+    let ucount = 0;
+    let ocount = Object.keys(o).length;
+    
+    topping.some((el) => {
+        if (!u[el]) ucount++;
+        u[el] = (u[el] || 0) + 1;
+        o[el]--;
+        if (!o[el]) ocount--;
 
+        if (ucount === ocount) {
+            answer++;
+            return false;
+        } else if (answer) return true;
+    });
+    
+    return answer;
+}
 ```
 daekim
 ```js
