[Feat] 자배 코드 추가

--- a/Level 1/39. 푸드 파이트 대회.md
+++ b/Level 1/39. 푸드 파이트 대회.md
@@ -12,7 +12,11 @@ function solution(food) {
 
 jabae
 ```js
-
+function solution(food) {
+    let answer = '';
+    food.forEach((el, i) => answer += i.toString().repeat(parseInt(el / 2)))
+    return answer + 0 + answer.split('').reverse().join('');
+}
 ```
 
 daekim
