[Feat] 자배 코드 추가

--- a/Level 1/40. [1차] 다트게임.md
+++ b/Level 1/40. [1차] 다트게임.md
@@ -18,7 +18,24 @@ function solution(dartResult) {
 
 jabae
 ```js
-
+function solution(dartResult) {
+    const calc = {
+        'S': (n) => n ** 1,
+        'D': (n) => n ** 2,
+        'T': (n) => n ** 3,
+        '*': (n) => n * 2,
+        '#': (n) => -n 
+    }
+    return dartResult.split(/([SDT*#])/).filter((el) => el).reduce((acc, cur) => {
+        if ((/[SDT#]/).test(cur)) acc[acc.length - 1] = calc[cur](acc[acc.length - 1]);
+        else if ((/[*]/).test(cur)) {
+            acc[acc.length - 1] = calc[cur](acc[acc.length - 1]);
+            acc[acc.length - 2] = calc[cur](acc[acc.length - 2]);
+        }
+        else acc.push(cur)
+        return acc;
+    }, []).reduce((acc, cur) => acc + cur);
+}
 ```
 
 daekim
