[Feat] 자배 코드 추가

--- a/Level 1/41. 로또의 최고 순위와 최저 순위.md
+++ b/Level 1/41. 로또의 최고 순위와 최저 순위.md
@@ -11,7 +11,15 @@ function solution(lottos, win_nums) {
 
 jabae
 ```js
-
+function solution(lottos, win_nums) {
+    let pos = 0;
+    let cor = 0;
+    lottos.forEach((el) => {
+        if (!el) pos++;
+        if (win_nums.indexOf(el) >= 0) cor++;
+    })
+    return [Math.min(7 - (cor + pos), 6), Math.min(7 - cor, 6)];
+}
 ```
 
 daekim
