[Feat] daekim 코드 추가

--- a/Level 2/40. 가장 큰 정사각형 찾기.md
+++ b/Level 2/40. 가장 큰 정사각형 찾기.md
@@ -36,5 +36,14 @@ function solution(board) {
 ```
 daekim
 ```js
-
+function solution(board) {
+    let max = board[0][0] ? 1 : 0;
+    for (let i = 1; i < board.length; i++) {
+        for (let j = 1; j < board[0].length; j++) {
+            if (board[i][j] === 1) board[i][j] = Math.min(board[i - 1][j - 1], board[i - 1][j], board[i][j - 1]) + 1;
+            if (board[i][j] > max) max = board[i][j];
+        }
+    }
+    return max * max;
+}
 ```
