--- a/Level 2/41. 롤케이크 자르기.md
+++ b/Level 2/41. 롤케이크 자르기.md
@@ -44,5 +44,21 @@ function solution(topping) {
 ```
 daekim
 ```js
-
+function solution(topping) {
+    let set1 = new Set();
+    let set2 = new Set();
+    let arr1 = [];
+    let arr2 = [];
+    let cnt = 0;
+    const len = topping.length - 1;
+    
+    for (let i = 0; i < len; i++) {
+        set1.add(topping[i]);
+        set2.add(topping[len - i]);
+        arr1.push(set1.size);
+        arr2.push(set2.size);
+    }
+    for(let i = 0; arr1[i] <= arr2[len - i - 1]; i++) if (arr1[i] === arr2[len - i - 1]) cnt++;
+    return cnt;
+}
 ```
