[Feat] jihyukim 코드 추가

--- a/Level 1/42. 가장 가까운 글자.md
+++ b/Level 1/42. 가장 가까운 글자.md
@@ -1,6 +1,13 @@
 jihyukim
 ```js
-
+function solution(s) {
+    const obj = {};
+    return s.split('').map((el, i) => {
+        const ret = el in obj ? i - obj[el] : -1;
+        obj[el] = i;
+        return ret;
+    });
+}
 ```
 
 jabae
@@ -20,4 +27,9 @@ function solution(s) {
         return acc;
     }, [])
 }
+
+```
+jiyokim
+```js
+
 ```
