[Feat] jihyukim 코드 추가

--- a/Level 1/44. 과일장수.md
+++ b/Level 1/44. 과일장수.md
@@ -1,6 +1,10 @@
 jihyukim
 ```js
-
+function solution(k, m, score) {
+    let ret = 0;
+    for (let i = m - 1, s = score.sort((a, b) => b - a); i < s.length; i += m) ret += s[i] * m;
+    return ret;
+}
 ```
 
 jabae
@@ -13,4 +17,9 @@ daekim
 function solution(k, m, score) {
     return score.sort((a, b) => b - a).reduce((acc, cur, i) => acc += !((i + 1) % m) ? cur * m : 0, 0);
 }
+```
+
+jiyokim
+```js
+
 ```
