[Feat] jihyukim 코드 추가

--- a/Level 1/43. 체육복.md
+++ b/Level 1/43. 체육복.md
@@ -1,6 +1,17 @@
 jihyukim
 ```js
-
+function solution(n, lost, reserve) {
+    let l = new Set(lost), r = new Set(reserve);
+    
+    l.forEach((el) => { if (r.has(el)) l.delete(el), r.delete(el) });
+    for (let i = 1; i <= n; i++) {
+        if (l.has(i)) {
+            if (r.delete(i - 1)) l.delete(i);
+            else if (r.delete(i + 1)) l.delete(i);
+        }
+    };
+    return n - l.size;
+}
 ```
 
 jabae
