[Feat] jiyokim 코드 추가

--- a/Level 1/42. 가장 가까운 글자.md
+++ b/Level 1/42. 가장 가까운 글자.md
@@ -31,5 +31,13 @@ function solution(s) {
 ```
 jiyokim
 ```js
-
+function solution(s) {
+    let answer = [];
+    const sReverse = s.split('').reverse().join('');
+    [...s].forEach((c, i) => {
+        let idx = sReverse.indexOf(c, s.length - i);
+        idx > 0 ? answer.push(idx - (s.length - i) + 1) : answer.push(-1);
+    })
+    return answer;
+}
 ```
