[Feat] jiyokim 코드 추가

--- a/Level 1/43. 체육복.md
+++ b/Level 1/43. 체육복.md
@@ -32,3 +32,26 @@ function solution(n, lost, reserve) {
     return n - losSet.size;
 }
 ```
+
+jiyokim
+```js
+function solution(n, lost, reserve) {
+    let newLost = lost.filter(e => !reserve.includes(e));
+    let newReserve = reserve.filter(e => !lost.includes(e));
+    let answer = n - newLost.length;
+    newLost = newLost.sort((a, b) => a - b);
+    newLost.forEach((e) => {
+        let idx = newReserve.indexOf(e - 1);
+        let idx2 = newReserve.indexOf(e + 1);
+        if (idx >= 0) {
+            answer++;
+            newReserve.splice(idx, 1);
+        }
+        else if (idx2 >= 0) {
+            answer++;
+            newReserve.splice(idx2, 1);
+        }
+    });
+    return answer;
+}
+```
