[Feat] jiyokim 코드 추가

--- a/Level 1/44. 과일장수.md
+++ b/Level 1/44. 과일장수.md
@@ -21,5 +21,14 @@ function solution(k, m, score) {
 
 jiyokim
 ```js
-
+function solution(k, m, score) {
+    var answer = 0;
+    let arr = [];
+    score.sort().reverse();
+    for (let i = 0; i < score.length; i += m)
+        arr.push(score.slice(i, i + m));
+    arr = arr.filter(e => e.length === m);
+    arr.map((e)=> { answer += m * e.pop(); })
+    return answer;
+}
 ```
