[Faet] daekim 코드 추가

--- a/Level 2/42. 거리두기 확인하기.md
+++ b/Level 2/42. 거리두기 확인하기.md
@@ -8,6 +8,39 @@ jabae
 
 daekim
 ```js
+function solution(places) {
+    return places.map((el) => {
+       return check(el);
+    });
+
+    function check(maps){
+        const dir = [[0, -1], [1, 0], [0, 1], [-1, 0]];
+        let pos = [];
+
+        maps = maps.map((el, idx) => {
+            for (let i = 0; i < el.length; i++) el[i] === 'P' && pos.push([idx, i]);
+            return el.split('');
+        });
+
+        for (let idx = 0; idx < pos.length; idx++) {
+            let [y, x] = pos[idx];
+            const que = [[y, x, 0]];
+            maps[y][x] = 'X';
+            while (que.length) {
+                const [befy, befx, cnt] = que.pop();
+                for (let i = 0; i < dir.length; i++) {
+                    let afy = dir[i][0] + befy;
+                    let afx = dir[i][1] + befx;
+                    if (afy >= 0 && afy <= 4 && afx >= 0 && afx <= 4 && cnt < 2 && maps[afy][afx] !== 'X') {
+                        if (maps[afy][afx] === 'P') return 0;
+                        que.push([afy, afx, cnt + 1]);
+                    }
+                }
+            }
+        }
+        return 1;
+    }
+}
 ```
 
 jiyokim
