[Feat] 자배 코드 추가

--- a/Level 1/42. 가장 가까운 글자.md
+++ b/Level 1/42. 가장 가까운 글자.md
@@ -12,6 +12,12 @@ function solution(s) {
 
 jabae
 ```js
+function solution(s) {
+    return s.split('').reverse().map((el, i, arr) => {
+        const idx = arr.indexOf(el, i + 1);
+        return idx > 0 ? idx - i : -1;
+    }).reverse();
+}
 
 ```
 
