[Feat] 자배 코드 추가

--- a/Level 1/43. 체육복.md
+++ b/Level 1/43. 체육복.md
@@ -16,6 +16,20 @@ function solution(n, lost, reserve) {
 
 jabae
 ```js
+function solution(n, lost, reserve) {
+    const lF = lost.sort((a, b) => a - b).filter((el) => !reserve.includes(el));
+    const rF = reserve.sort((a, b) => a - b).filter((el) => !lost.includes(el));
+    let answer = n - lF.length;
+
+    lF.forEach((el) => {
+        let idx = rF.indexOf(el - 1) >= 0 ? rF.indexOf(el - 1) : rF.indexOf(el + 1);
+        if (idx >= 0) {
+            rF.splice(0, idx + 1);
+            answer++;
+        } else return ;
+    })
+    return answer;
+}
 
 ```
 
