[Feat] 자배 코드 추가

--- a/Level 1/44. 과일장수.md
+++ b/Level 1/44. 과일장수.md
@@ -9,6 +9,14 @@ function solution(k, m, score) {
 
 jabae
 ```js
+function solution(k, m, score) {
+    let answer = 0;
+    score.sort();
+    while (score.length >= m) {
+        answer += score.splice(score.length - m)[0] * m;
+    }
+    return answer;
+}
 
 ```
 
